--- a/resources/views/template/partials/html_blocks/page-head.twig
+++ b/resources/views/template/partials/html_blocks/page-head.twig
@@ -7,7 +7,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
-                <div class="text"></div>
+                <div class="text">{{ pageText | raw }}</div>
             </div>
         </div>
     </div>
