--- a/resources/views/website/about-us.twig
+++ b/resources/views/website/about-us.twig
@@ -22,26 +22,31 @@
                         </div>
                     </div>
                     <div class="col-md-6 company-info-holder">
-                        <h4>About {{ app.name }}</h4>
                         <div class="info-slider">
                             <div>
                                 <div class="details-holder">
-                                    <p></p>
+                                    <p>
+                                        Swap <span>is traditionally a cryptocurrency escrow service.
+                                        <br>Currently, the service allows for persons within Ghana to exchange their local currency for 
+                                        <strong>Bitcoin</strong>, <strong>Ethereum</strong> or <strong>Litecoin</strong></span>.
+                                    </p>
                                 </div>
                             </div>
                             <div>
                                 <div class="details-holder">
-                                    <p></p>
+                                    <p>
+                                        <span>Users can post buy or sell trade ads, set precisely their official exchange rates and payment details.<br>
+                                        We only come in to ensure the mutual trust between trading parties.<br>
+                                        Our service fees are so low, they appear non-existent.</span>
+                                    </p>
                                 </div>
                             </div>
                             <div>
                                 <div class="details-holder">
-                                    <p></p>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="details-holder">
-                                    <p></p>
+                                    <p>
+                                        <span>Swap is undoubtedly among the few, embracing a modern era of decentralized financial systems that place the liberating power in the hands of its customers.
+                                        <br>Our support team is ever ready to assist you at every step of the way.</span>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -51,18 +56,56 @@
         </div>
     </div>
 
-    <div id="ifeatures" class="container-fluid">
+    <div id="info" class="container-fluid">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="row-title">Why Choose Us?</div>
+                    <div class="info-text"></div>
                 </div>
-            </div>
-            <div class="row">
-
             </div>
         </div>
     </div>
+
+    <div id="ifeatures" class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-icon">
+                            <img src="images/feature2.png" alt="">
+                        </div>
+                        <div class="feature-title">Feature</div>
+                        <div class="feature-details">Lorem ipsum dolor sit amir anim
+                            amoe yosner dolner 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-icon">
+                            <img src="images/feature3.png" alt="">
+                        </div>
+                        <div class="feature-title">Feature</div>
+                        <div class="feature-details">Lorem ipsum dolor sit amir anim
+                            amoe yosner dolner 
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="feature-box">
+                        <div class="feature-icon">
+                            <img src="images/feature4.png" alt="">
+                        </div>
+                        <div class="feature-title">Feature</div>
+                        <div class="feature-details">Lorem ipsum dolor sit amir anim
+                            amoe yosner dolner 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
     <div id="more-info" class="container-fluid">
         <div class="bg-custom"></div>
@@ -106,6 +149,58 @@
                 </div>
             </div>
             <div class="row team-holder">
+                <div class="col-sm-6 col-md-3">
+                    <div class="person-box">
+                        <div class="person-icon">
+                            <div class="person-img"><img src="" alt=""></div>
+                        </div>
+                        <div class="person-name">Name</div>
+                        <div class="person-title">Position</div>
+                        <div class="person-social">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="person-box">
+                        <div class="person-icon">
+                            <div class="person-img"><img src="" alt=""></div>
+                        </div>
+                        <div class="person-name">Name</div>
+                        <div class="person-title">Position</div>
+                        <div class="person-social">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="person-box">
+                        <div class="person-icon">
+                            <div class="person-img"><img src="" alt=""></div>
+                        </div>
+                        <div class="person-name">Name</div>
+                        <div class="person-title">Position</div>
+                        <div class="person-social">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="person-box">
+                        <div class="person-icon">
+                            <div class="person-img"><img src="" alt=""></div>
+                        </div>
+                        <div class="person-name">Name</div>
+                        <div class="person-title">Position</div>
+                        <div class="person-social">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
