--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -14,20 +14,53 @@
                         <img src="assets/img/logo.png" alt="">
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 pl-0 pr-0">
                     <div class="head-content">
-                        <p>Lorem ipsum dolor sit amir anim amoe yosner dolner</p>
-                        <p>Lorem ipsum dolor sit amet, consectetuer elit, sed diam <span>nonummy</span> nibh tincidunt ut laoreet dolore magna aliquam erat.</p>
+                        <p><span>Swap</span> is a peer-to-peer exchange that aims to completely bridge the world of centralized and decentralized financial institutes.</p>
+                        <p class="fs-15">Trade <strong>Bitcoin</strong>, <strong>Ethereum</strong> and <strong>Litecoin</strong> for fiat currency on an easy, secure and fast platform. We place the trading power in your hands and keep up the trust.</p>
+                    </div>
+                    <div class="row">
+                        <div class="crypto-feature">
+                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
+                                <div class="crypto-box">
+                                    <div class="crypto-icon">
+                                        <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
+                                    </div>
+                                    <div class="crypto-title">Bitcoin  <span class="">+0.00%</span></div>
+                                    <div class="crypto-details bitcoin">
+                                        GHS00,000.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
+                                <div class="crypto-box">
+                                    <div class="crypto-icon">
+                                        <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
+                                    </div>
+                                    <div class="crypto-title">Ethereum <span class="">+0.00%</span></div>
+                                    <div class="crypto-details ethereum">
+                                        GHS00,000.00
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
+                                <div class="crypto-box">
+                                    <div class="crypto-icon">
+                                        <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
+                                    </div>
+                                    <div class="crypto-title">Litecoin <span class="">+0.00%</span></div>
+                                    <div class="crypto-details litecoin">
+                                        GHS00,000.00
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
 
 
 
