--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-md-6 pl-0 pr-0">
                     <div class="head-content">
-                        <p><span>Swap</span> is a peer-to-peer exchange that aims to completely bridge the world of centralized and decentralized financial institutes.</p>
+                        <p><span>Swap</span> is a peer-to-peer exchange for crypto currencies.</p>
                         <p class="fs-15">Trade <strong>Bitcoin</strong>, <strong>Ethereum</strong> and <strong>Litecoin</strong> for fiat currency on an easy, secure and fast platform. We place the trading power in your hands and keep up the trust.</p>
                     </div>
                     <div class="row">
