--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4330,7 +4330,7 @@ svg.logo text {
 }
 
 #team .person-box .person-title {
-    color: #3f5d6f;
+    color: #000000;
     font-size: 15px;
     font-weight: 300;
     opacity: 0.7;
