--- a/resources/views/dashboard/dashboard.twig
+++ b/resources/views/dashboard/dashboard.twig
@@ -1,19 +1,7 @@
-{% extends 'template/app.twig' %}
+{% extends 'template/dashboard.twig' %}
 
-
-
-{% block body %}
-    <div id="header-holder" class="inner-header dashboard-header">
-        <div class="whitebg"><img src="assets/img/headbg.svg" alt=""></div>
-        {% include 'template/partials/html_blocks/navbar.twig' %}
-    </div>
-
-
-
-
-
-
-
+{% block mainarea %}
+    
 
 
 
