--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -26,7 +26,7 @@
                                     <div class="crypto-icon">
                                         <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
                                     </div>
-                                    <div class="crypto-title">Bitcoin  <span class="">+0.00%</span></div>
+                                    <div class="crypto-title">Bitcoin  <span class="bitcoin">+0.00%</span></div>
                                     <div class="crypto-details bitcoin">
                                         GHS00,000.00
                                     </div>
@@ -37,7 +37,7 @@
                                     <div class="crypto-icon">
                                         <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
                                     </div>
-                                    <div class="crypto-title">Ethereum <span class="">+0.00%</span></div>
+                                    <div class="crypto-title">Ethereum <span class="ethereum">+0.00%</span></div>
                                     <div class="crypto-details ethereum">
                                         GHS00,000.00
                                     </div>
@@ -48,7 +48,7 @@
                                     <div class="crypto-icon">
                                         <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
                                     </div>
-                                    <div class="crypto-title">Litecoin <span class="">+0.00%</span></div>
+                                    <div class="crypto-title">Litecoin <span class="litecoin">+0.00%</span></div>
                                     <div class="crypto-details litecoin">
                                         GHS00,000.00
                                     </div>
