--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700");
 @import url("https://fonts.googleapis.com/css?family=Rubik:400,500");
-@import url("../fonts/hostify.css");
+@import url("../fonts/custom.css");
 
 /*------------------------------------------------------------------
-	1. General Styles
+	General Styles
 -------------------------------------------------------------------*/
 
 *,
@@ -362,7 +362,7 @@ a:focus {
 }
 
 #header-holder.dashboard-header {
-    padding-top: 0px;
+    padding-top: 15px;
     -webkit-box-shadow: 0 9px 14px rgba(0, 0, 0, 0.04);
     box-shadow: 0 9px 14px rgba(0, 0, 0, 0.04);
 }
@@ -431,7 +431,7 @@ nav.custom-footer p.navbar-text>span {
         top: 0;
         width: 100%;
         height: 30%;
-        background-color: #cb4b70;
+        background-color: transparent;
         -webkit-transform: skewY(-10deg);
         -moz-transform: skewY(-10deg);
         -ms-transform: skewY(-10deg);
@@ -590,7 +590,7 @@ svg.logo text {
 }
 
 .navbar-toggle {
-    margin-top: 8px;
+    margin-top: 0px;
 }
 
 .navbar-nav>li>.dropdown-menu {
@@ -1370,7 +1370,7 @@ svg.logo text {
 
 
 /*------------------------------------------------------------------
-	6. Message Section Styles
+	Message Section Styles
 -------------------------------------------------------------------*/
 
 .message-area {
@@ -1438,7 +1438,7 @@ svg.logo text {
 
 
 /*------------------------------------------------------------------
-	7. Pricing Section Styles
+    Pricing Section Styles
 -------------------------------------------------------------------*/
 
 #pricing {
@@ -2278,7 +2278,7 @@ svg.logo text {
 
 
 /*------------------------------------------------------------------
-	8. Custom Plan Section Styles
+	Custom Plan Section Styles
 -------------------------------------------------------------------*/
 
 #custom-plan {
@@ -4450,9 +4450,6 @@ svg.logo text {
 #apps {
     background-color: #c44569;
     background-repeat: repeat-x;
-    background-image: -webkit-linear-gradient(90deg, #f89cb6, #ed6289);
-    background-image: -o-linear-gradient(90deg, #f89cb6, #ed6289);
-    background-image: linear-gradient(90deg, #f89cb6, #ed6289);
     padding-top: 30px;
     padding-bottom: 40px;
     text-align: center;
@@ -4541,9 +4538,9 @@ svg.logo text {
     min-height: 228px;
     margin-bottom: -86px;
     border-radius: 0;
-    background-color: #c44569;
-    -webkit-box-shadow: 0 -9px 20px rgba(0, 0, 0, 0.05);
-    box-shadow: 0 -9px 20px rgba(0, 0, 0, 0.05);
+    background-color: #ffffff;
+    -webkit-box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
     overflow: hidden;
 }
 
@@ -4570,7 +4567,7 @@ svg.logo text {
 #apps .apps-holder .app-details div[class^="app-details"] .app-title {
     font-size: 17px;
     font-weight: 700;
-    color: #ffffff;
+    color: #000000;
     text-transform: uppercase;
     margin-bottom: 15px;
     text-align: left;
@@ -4579,7 +4576,7 @@ svg.logo text {
 #apps .apps-holder .app-details div[class^="app-details"] .app-text {
     font-size: 15px;
     font-weight: 300;
-    color: #ffffff;
+    color: #000000;
     text-align: left;
     margin-bottom: 15px;
 }
@@ -6869,4 +6866,21 @@ div.crypto-bg-1::after {
     left: 0;
     bottom: 0;
     right: 0;
+}
+
+
+/*------------------------------------------------------------------
+	User Dashboard
+-------------------------------------------------------------------*/
+
+#dashboard {
+    padding-top: 70px;
+    padding-bottom: 30px;
+}
+
+@media(max-width: 768px) {
+    #dashboard {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
 }
