--- a/resources/views/template/dashboard.twig
+++ b/resources/views/template/dashboard.twig
@@ -36,6 +36,7 @@
             </div>
         </div>
 
+        {% include 'template/partials/html_blocks/footer.twig' %}
     {% endblock %}
 
     <script src="{{ base_url() }}/assets/js/jquery.min.js"></script>
