--- a/resources/views/template/dashboard.twig
+++ b/resources/views/template/dashboard.twig
@@ -39,16 +39,7 @@
         {% include 'template/partials/html_blocks/footer.twig' %}
     {% endblock %}
 
-    <script src="{{ base_url() }}/assets/js/jquery.min.js"></script>
-    {% if uri in ['not-found-404','not-allowed-405'] %}
-    <script src="{{ base_url() }}/assets/js/bootstrap-v4.min.js"></script>
-    {% else %}
-    <script src="{{ base_url() }}/assets/js/bootstrap.min.js"></script>
-    {% endif %}
-    <script src="{{ base_url() }}/assets/js/bootstrap-slider.min.js"></script>
-    <script src="{{ base_url() }}/assets/js/slick.min.js"></script>
-    <script src="{{ base_url() }}/assets/js/main.js"></script>
-
-    <!--<script src="{{ base_url() }}/assets/js/app/{{ uri }}.js"></script>-->
+    <script src="{{ base_url() }}/assets/js/app.js"></script>
+    {% block scripts %} {% endblock %}
 </body>
 </html>
