--- a/resources/views/website/home.twig
+++ b/resources/views/website/home.twig
@@ -1,86 +1,38 @@
 {% extends 'template/app.twig' %}
-
-
-
 {% block body %}
-<div id="header-holder" class="homepage-header">
-    <div class="bg-animation"></div>
-    {% include 'template/partials/html_blocks/navbar.twig' %}
-    <div id="page-head" class="container-fluid inner-page">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center">
-                    <div class="logo-icon">
-                        <img src="assets/img/logo.png" alt="">
+{% include 'partials/components/preloader.twig' %}
+
+    <div id="header-holder" class="homepage-header">
+        <div class="bg-animation"></div>
+        {% include 'template/partials/html_blocks/navbar.twig' %}
+        <div id="page-head" class="container-fluid inner-page">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 text-center">
+                        <div class="logo-icon">
+                            <img src="assets/img/logo.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6 pl-0 pr-0">
-                    <div class="head-content">
-                        <p><span>Swap</span> is a peer-to-peer exchange for crypto currencies.</p>
-                        <p class="fs-15">Trade <strong>Bitcoin</strong>, <strong>Ethereum</strong> and <strong>Litecoin</strong> for fiat currency on an easy, secure and fast platform. We place the trading power in your hands and keep up the trust.</p>
-                    </div>
-                    <div class="row">
-                        <div class="crypto-feature">
-                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-                                <div class="crypto-box">
-                                    <div class="crypto-icon">
-                                        <img src="{{ base_url() }}/assets/img/coins/bitcoin.png" alt="">
-                                    </div>
-                                    <div class="crypto-title">Bitcoin  <span class="bitcoin">+0.00%</span></div>
-                                    <div class="crypto-details bitcoin">
-                                        GHS00,000.00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-                                <div class="crypto-box">
-                                    <div class="crypto-icon">
-                                        <img src="{{ base_url() }}/assets/img/coins/etherum.png" alt="">
-                                    </div>
-                                    <div class="crypto-title">Ethereum <span class="ethereum">+0.00%</span></div>
-                                    <div class="crypto-details ethereum">
-                                        GHS00,000.00
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-xs-12 col-sm-4 pl-0 pr-0">
-                                <div class="crypto-box">
-                                    <div class="crypto-icon">
-                                        <img src="{{ base_url() }}/assets/img/coins/litecoin.png" alt="">
-                                    </div>
-                                    <div class="crypto-title">Litecoin <span class="litecoin">+0.00%</span></div>
-                                    <div class="crypto-details litecoin">
-                                        GHS00,000.00
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="col-md-7 col-md-offset-1 pl-0 pr-0">
+                        <div class="head-content">
+                            <p><span>Swap</span> is a peer-to-peer exchange for crypto currencies.</p>
+                            <p class="fs-15">
+                                Trade <strong>Bitcoin</strong>, <strong>Ethereum</strong> and <strong>Litecoin</strong> 
+                                for fiat currency on an easy, secure and fast platform. We place the trading power in your hands and keep up the trust.
+                            </p>
+                        </div>
+                        <div class="row">
+                            {% include 'partials/components/rates-home.twig' %}
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     {% include 'template/partials/html_blocks/footer.twig' %}
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ base_url() }}/assets/js/website/home.js"></script>
 {% endblock %}
